# desksanity

./: .gitignore  Makefile.am  NEWS  configure.ac  e-gadget.xml  e-module-desksanity.edc  e-module-desksanity.edj  meson.build
edc/: all.edc  bryce.edc  bryce_editor.edc  wireless.edc
loader/: loader.c  start.c  start.desktop.in  test.c  test.desktop.in
src/: Makefile.am  Makefile.mk  desksanity.c  ds_config.c  e_mod_config.c  e_mod_main.c  e_mod_main.h  magnify.c  maximize.c  moveresize.c  pip.c  runner.c  zoom.c
src/gadgets/: Makefile.mk  bryce.c  bryce.h  bryce_config.c  core.c  demo.c  gadget.h  site_config.c
src/gadgets/clock/: clock.c  clock.h  config.c  mod.c  time.c
src/gadgets/ibar/: ibar.c  ibar.h
src/gadgets/start/: mod.c  start.c
src/gadgets/wireless/: connman.c  mod.c  wireless.c  wireless.h
